[package]
name = "kio"
version = "0.1.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
#v0.5.2
rsocket_rust =  { git = "https://github.com/rsocket/rsocket-rust", branch = "feature/messaging" }
rsocket_rust_transport_tcp = { git = "https://github.com/rsocket/rsocket-rust", branch = "feature/messaging" }
rsocket_rust_messaging = { git = "https://github.com/rsocket/rsocket-rust", branch = "feature/messaging" }
bytes = "0.5.4"
futures = "0.3.4"
tokio =  "0.2.20"
tokio-util = "0.3.1"
serde = { version = "1.0", features = ["derive"] }