[package]
name = "kio"
version = "0.1.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
#v0.5.2
rsocket_rust =  { git = "https://github.com/rsocket/rsocket-rust", branch = "feature/messaging" }
rsocket_rust_transport_tcp = { git = "https://github.com/rsocket/rsocket-rust", branch = "feature/messaging" }
rsocket_rust_messaging = { git = "https://github.com/rsocket/rsocket-rust", branch = "feature/messaging" }
log = "0.4.8"
bytes = "0.5.4"
futures = "0.3.5"
tokio = { version = "0.2.21", default-features = false, features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.7.1"
chrono = "0.4.11"

[[example]]
name = "request"
path = "src/examples/request.rs"